# Storage_Performance_Acceleration

./: README.md
ARC/: CMakeLists.txt  a.out  readme.md  ~
ARC/example/: test.cc
ARC/include/: ARCCacheHeader.h  LFUCacheHeader.h  LRUCacheHeader.h  infra_comp.h
ARC/src/: ARCCache.cc  ARCfunc.cc  LFUCache.cc  LFUfunc.cc  LRUCache.cc
ARC/test/: test.cc
LFUCache(最近最少使用)算法/: readme.md
LRUCache(最近最久未使用)算法/: LRUCache.cc  readme.md
